# test-qt-2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  main.cpp  requirements.txt  server.py  test_data.py  testlisting.cpp  testlocalsize.cpp
.github/workflows/: windows.yml
config/: config.example.txt  config.linux.txt  config.txt
data/lamp_sample/dir1/: 文件2.txt
